added launch script for npm

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Interface for managing the radio stations of the Ipi Radio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
