--- a/src/settings.json
+++ b/src/settings.json
@@ -1,5 +1,6 @@
 {
     "IP": "192.168.8.50",
     "Port": 8088,
-    "useWebserver": true
+    "runWebserver": true,
+    "framebuffer": "/dev/fb0"
 }
