change default settings and add touch optimize

--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -2,6 +2,7 @@
     "IP": "auto",
     "Port": 8088,
     "runWebserver": true,
-    "useFramebuffer": false,
+    "touchOptimize": true,
+    "useFramebuffer": true,
     "framebuffer": "/dev/fb0"
 }
