introduce autotimer setting

--- a/src/settings.json
+++ b/src/settings.json
@@ -4,5 +4,6 @@
     "runWebserver": true,
     "touchOptimize": true,
     "useFramebuffer": true,
-    "framebuffer": "/dev/fb0"
+    "framebuffer": "/dev/fb0",
+    "autotimer": false
 }
